# mikro

./: .eslintrc.json  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
public/scripts/: disable-reload.js  disable-zoom.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: domain.rs  host.rs  image.rs  localhost.rs  main.rs  media.rs  menu.rs  sanity.rs  utils.rs
src/__pages/: index.tsx
src/app/: layout.tsx  page.tsx  styles.css
src/components/: CardButton.tsx  check.tsx  device-silent.tsx  file-explorer.tsx  files.tsx  sanity.tsx  stream-example.tsx  uploader.tsx  video.tsx
src/components/icons/: actions.tsx  close.tsx  media.tsx  view.tsx
src/components/preview/: animation.module.css  frames.tsx  img.tsx  index.tsx  s.tsx  thumbs.tsx  timeline.tsx  video.tsx
src/components/preview/ctx/: ctx.tsx  types.ts
src/components/preview/video/: controls.tsx  display.tsx  frames.tsx  handle.tsx  index.tsx  play-control.tsx  time.tsx  timeline.tsx  trimming.tsx
src/components/preview/video/dragable/: draggable.tsx  types.ts
src/components/preview/video/timeline/: Timeline.tsx
src/components/preview/video/timeline/seek/: Seek.css  Seek.tsx
src/components/preview/video/timeline/thumbs/: Thumbs.css  Thumbs.tsx
src/config/: app.ts
src/ctx/: action-types.ts  actions.ts  constants.ts  reducer.ts  selectors.tsx  state.tsx  store.tsx  use-on-window-resize.tsx
src/ctx/reducers/: device.ts  files.ts  sanity.ts
src/hooks/: use-debounced.ts  use-event-listener.ts  use-interval.ts  use-toggle.ts  use-unmount.ts
src/lib/: fs.ts  req.ts  video-to-frames.ts  video.ts
src/utils/: helpers.ts  media.ts  uuid.ts
(+2 files in other folders)
